--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "bootstrap": "^5.1.3",
+    "feather-icons": "^4.28.0",
+    "firebase": "^9.6.5",
+    "jquery": "^3.6.0",
+    "react-bootstrap": "^2.1.2",
+    "react-feather": "^2.0.9"
   },
   "devDependencies": {
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "12.1.5",
+    "sass": "^1.50.1"
   }
 }
