--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
     "bootstrap": "^5.1.3",
+    "caniuse-lite": "^1.0.30001563",
     "feather-icons": "^4.28.0",
     "firebase": "^9.6.5",
     "jquery": "^3.6.0",
+    "next": "12.1.5",
+    "react": "18.0.0",
     "react-bootstrap": "^2.1.2",
+    "react-dom": "18.0.0",
     "react-feather": "^2.0.9"
   },
   "devDependencies": {
