--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
     "bootstrap": "^5.1.3",
     "feather-icons": "^4.28.0",
     "firebase": "^9.6.5",
     "jquery": "^3.6.0",
+    "next": "^14.0.3",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.1.2",
+    "react-dom": "^18.2.0",
     "react-feather": "^2.0.9"
   },
   "devDependencies": {
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
+    "eslint-config-next": "^14.0.3",
     "sass": "^1.50.1"
   }
 }
