--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "bootstrap": "^5.1.3",
     "feather-icons": "^4.28.0",
     "firebase": "^9.6.5",
